# smcx

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  ROADMAP.md  index.html  mkdocs.yml  objects.inv  properdocs.yml  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  LICENSE_HEADER  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: 1_bug_report.yml  2_feature_request.yml
.github/actions/setup-uv/: action.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  docs.yml  pr-title.yml  release.yml  test-publish.yml
api/smcx/: index.html
api/smcx/auxiliary/: index.html
api/smcx/bootstrap/: index.html
api/smcx/containers/: index.html
api/smcx/diagnostics/: index.html
api/smcx/exceptions/: index.html
api/smcx/guided/: index.html
api/smcx/kalman/: index.html
api/smcx/liu_west/: index.html
api/smcx/reporting/: index.html
api/smcx/resampling/: index.html
api/smcx/runner/: index.html
api/smcx/simulate/: index.html
api/smcx/smc2/: index.html
api/smcx/tempering/: index.html
api/smcx/types/: index.html
api/smcx/weights/: index.html
benchmarks/: PROTOCOL.md
benchmarks/exploratory/: bench_compile.py  bench_kernel.py  bench_lazy.py  bench_pitfalls.py  bench_round2.py  bench_round3.py  bench_streams.py  exp_a_summation.py  exp_b2_followup.py  exp_b_resampling.py  exp_c_samplers.py  exp_d_linalg_prec.py  h1_phases.py  h2_rng_jax.py  h2_rng_mlx.py  h3_resample.py  h4_track.py  h4b_decompose.py  h5_floor.py  h7_valuebranch.py  track_contam.py  track_recheck.py
benchmarks/killtest/: gen_data.py  jax_side.py  mlx_side.py  report.py  run_cells.sh
benchmarks/native_vs_jax_mps/: PROTOCOL.md  common.py  jax_worker.py  mlx_worker.py  report.py  run.py
benchmarks/profiling/: PROTOCOL.md  census.py  common.py  dynamax_adapter.py  locking.py  models.py  preflight.py  report.py  representation.py  run.py  trace.py  worker.py  workloads.py
benchmarks/pytree_state/: benchmark.py
benchmarks/results/: 2026-07-14-kill-test.md  2026-07-15-kill-test-optimized.md  2026-07-15-kill-test-rerun.md  2026-07-15-smc2-device-benchmark.md  2026-07-16-native-vs-jax-mps-review.md  2026-07-16-native-vs-jax-mps.md  2026-07-19-all-algorithm-profile.md  2026-07-19-dynamax-integration-validation.md  2026-07-19-matched-optimization-profile.md  2026-07-19-pytree-state-benchmark.md  2026-07-19-representation-history-profile.md  2026-07-22-tempering-accuracy.md
benchmarks/results/2026-07-16-native-vs-jax-mps/: merged.json  tuned_lgssm_nohist.json
benchmarks/results/2026-07-16-native-vs-jax-mps/traces/: lgssm_pf_n1000000_jax_mps_sync_ir.json  lgssm_pf_n10000_jax_mps_sync_ir.json  random_n10000000_jax_mps_sync_ir.json  random_n10000_jax_mps_sync_ir.json
benchmarks/smc2/: bench_smc2.py  particles_side.py
benchmarks/tempering_accuracy/: __init__.py  analysis.py  artifacts.py  core.py  plan.py  report_accuracy.py  report_attempts.py  report_data.py  report_markdown.py  report_measurements.py  report_plots.py  report_publish.py  report_render.py  report_timing.py  supervisor.py  transport.py  worker.py
docs/: api.md  gen_ref_pages.py  index.md  publishing.md
docs/adr/: 0023-one-time-external-validation.md  0024-structured-latent-state-pytrees.md  0025-monotone-multinomial-prefix-rounding.md  0026-jax-mps-scan-history-floor.md  0027-arviz-bridge-contract.md  0028-streaming-filter-checkpoints.md  0029-common-space-static-posterior-updating.md  0030-native-conditionally-linear-gaussian-rbpf.md  0031-mps-bootstrap-update-containment.md  index.md
docs/guides/: arviz.md  custom-models.md  quickstart.md  stochastic-volatility.md
docs/research/: licensing.md
guides/arviz/: index.html
guides/custom-models/: index.html
guides/quickstart/: index.html
guides/stochastic-volatility/: index.html
scripts/: update_headers.py
search/: search_index.json
smcjax/: __init__.py  _utils.py  auxiliary.py  bootstrap.py  containers.py  diagnostics.py  liu_west.py  simulate.py  types.py
src/smcjax/: __init__.py  __main__.py  _utils.py  auxiliary.py  bootstrap.py  containers.py  diagnostics.py  liu_west.py  simulate.py  types.py  weights.py
src/smcx/: __init__.py  __main__.py  _fk.py  _utils.py  auxiliary.py  bootstrap.py  containers.py  diagnostics.py  distributions.py  exceptions.py  guided.py  kalman.py  liu_west.py  reporting.py  resampling.py  runner.py  simulate.py  smc2.py  tempering.py  types.py  weights.py
tests/: __init__.py  _extended_kalman_reference.py  _kalman.py  _kalman_reference.py  _lgssm_reference.py  _unscented_kalman_reference.py  conftest.py  test_auxiliary.py  test_auxiliary_guided_composition.py  test_batched.py  test_bootstrap.py  test_bootstrap_checkpoint_regressions.py  test_bootstrap_checkpoints.py  test_default_dtype.py  test_diagnostics.py  test_distributions.py  test_extended_kalman.py  test_genealogy.py  test_guided.py  test_init.py  test_jit_vmap.py  test_kalman.py  test_liu_west.py  test_loop_shell.py  test_native_vs_jax_mps_benchmark.py  test_native_vs_jax_mps_report.py  test_pareto_k_crossval.py  test_profiling_benchmark.py  test_profiling_census.py  test_profiling_dynamax_adapter.py  test_profiling_locking.py  test_profiling_preflight.py  test_profiling_report.py  test_profiling_representation.py  test_profiling_trace.py  test_profiling_workloads.py  test_public_documentation.py  test_pytree_states.py  test_reference_data.py  test_reporting.py  (+27 more)
tutorials/filtering/: filtering.md  index.html
typings/mlx/: core.pyi
