[project]
name = "smcjax"
version = "1.0.1"
description = "Sequential Monte Carlo and particle filtering in JAX"
readme = "README.md"
authors = [
    { name = "Michael Ellis", email = "michaelellis003@gmail.com" }
]
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = [
    "jax",
    "particle-filter",
    "sequential-monte-carlo",
    "bayesian-inference",
    "state-space-models",
    "hidden-markov-models",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "blackjax>=1.3",
    "ipython>=8.38.0",
    "jax>=0.6,<0.7",
    "jaxlib>=0.6,<0.7",
    "jaxtyping>=0.2.25",
]

[project.optional-dependencies]
dynamax = ["dynamax>=0.1.3"]

[project.urls]
Homepage = "https://github.com/michaelellis003/smcjax"
Repository = "https://github.com/michaelellis003/smcjax"
Issues = "https://github.com/michaelellis003/smcjax/issues"
Documentation = "https://michaelellis003.github.io/smcjax/"
Changelog = "https://github.com/michaelellis003/smcjax/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.9.5,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs-gen-files>=0.6.1",
    "mkdocs-literate-nav>=0.6.3",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
    "pre-commit>=4.5.1",
    "properdocs>=1.6.7",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
    "ty>=0.0.29",
]
test = [
    "beartype>=0.22.9",
    "dynamax>=0.1.3",
]
notebooks = [
    "matplotlib>=3.8",
    "yfinance>=0.2",
    "dynamax>=0.1.3",
]

[tool.ruff]
# Target version enables modern syntax upgrades where possible
target-version = "py310"
preview = true
line-length = 80
indent-width = 4
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "D", # Core errors, warnings, isort, and docstrings
    "UP",  # pyupgrade (modernizes syntax)
    "B",   # flake8-bugbear (catches design flaws/bugs)
    "SIM", # flake8-simplify (cleans up messy logic)
    "RUF", # Ruff's custom advanced rules
]
ignore = [
    # jaxtyping uses string-shape annotations (e.g. Float[Array, "T n d"])
    # which ruff parses as forward references and rejects.
    "F722",
    # Allow Union[X, Y] style to match Dynamax/jaxtyping conventions.
    "UP007",
]

[tool.ruff.lint.pydocstyle]
# Enforce Google-style docstrings
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests use class-based grouping; method docstrings are noisy.
"tests/*" = ["D102", "D103", "D104"]
# conftest installs the jaxtyping import hook before importing smcjax,
# which forces module-level imports below code.
"tests/conftest.py" = ["E402"]
# __init__ re-exports the public API; the version-fallback try/except
# is intentional and not a re-export.
"src/smcjax/__init__.py" = ["RUF067"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_message = "chore(release): {version}"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
type = "github"

[tool.semantic_release.publish]
upload_to_vcs_release = true

[tool.ty.src]
# ty doesn't honor ruff's extend-exclude; mirror the notebook exclusion
# here so the type checker doesn't crawl into thesis-style notebooks.
exclude = ["notebooks/**"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["smcjax"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "@overload",
]
