[project]
name = "smcx"
version = "1.6.0"
description = "Sequential Monte Carlo in JAX: particle filters, tempered SMC, and SMC2 on CPU, CUDA, TPU, and Apple-silicon GPUs"
readme = "README.md"
authors = [
    { name = "Michael Ellis", email = "michaelellis003@gmail.com" }
]
license = "Apache-2.0"
requires-python = ">=3.11"
keywords = [
    "jax",
    "particle-filter",
    "sequential-monte-carlo",
    "bayesian-inference",
    "apple-silicon",
    "state-space-models",
    "hidden-markov-models",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "jax>=0.10,<0.11",
    "jaxlib>=0.10,<0.11",
    "jaxtyping>=0.3.7",
    "numpy>=2.2.6",
]

[project.urls]
Homepage = "https://github.com/michaelellis003/smcx"
Repository = "https://github.com/michaelellis003/smcx"
Issues = "https://github.com/michaelellis003/smcx/issues"
Documentation = "https://michaelellis003.github.io/smcx/"
Changelog = "https://github.com/michaelellis003/smcx/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.9.5,<0.12.0"]
build-backend = "uv_build"

[project.optional-dependencies]
arviz = ["arviz>=0.23.4"]
# Apple-GPU acceleration via the jax-mps PJRT plugin (ADR-0018).
metal = [
    # jax-mps only ships macOS-arm64 wheels; the marker keeps the
    # extra resolvable (as a no-op) on other platforms, e.g. Linux CI.
    "jax-mps>=0.10.10,<0.11; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[dependency-groups]
dev = [
    "arviz>=0.23.4",
    "beartype>=0.22.9",
    "hypothesis>=6.156.6",
    "mkdocs-gen-files>=0.6.1",
    "mkdocs-jupyter>=0.26.3",
    "mkdocs-literate-nav>=0.6.3",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
    "nanobind>=2.13.0",
    "pre-commit>=4.5.1",
    "properdocs>=1.6.7",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
    "ty>=0.0.29",
]
notebooks = [
    "blackjax>=1.2",
    "dynamax>=1.0.2",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "nbconvert>=7.17.1",
    "scipy>=1.17.1",
    "yfinance>=1.5.1",
]

[tool.ruff]
# Target version enables modern syntax upgrades where possible
target-version = "py310"
preview = true
line-length = 80
indent-width = 4
# Generated mlx stubs (ADR-0007) are vendored artifacts, not code.
extend-exclude = ["typings"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "D", # Core errors, warnings, isort, and docstrings
    "N",   # pep8-naming (Google style includes naming conventions)
    "UP",  # pyupgrade (modernizes syntax)
    "B",   # flake8-bugbear (catches design flaws/bugs)
    "SIM", # flake8-simplify (cleans up messy logic)
    "RUF", # Ruff's custom advanced rules
]
ignore = [
    # jaxtyping uses string-shape annotations (e.g. Float[mx.array, " n"])
    # which ruff parses as forward references and rejects (ADR-0007).
    "F722",
]

[tool.ruff.lint.pydocstyle]
# Enforce Google-style docstrings
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests use class-based grouping; method docstrings are noisy. LGSSM
# tests keep the literature's matrix notation (F, Q, H, R, P0).
# Example notebooks keep the thesis's mathematical notation
# (Gamma, EPS), pedagogical lambdas, and per-section imports.
"docs/examples/*.ipynb" = [
    "N806",
    "N803",
    "D103",
    "E731",
    "E741",
    "E402",
    "B905",
    "RUF059",
    "E501",
]
"tests/*" = ["D102", "D103", "D104", "N806", "N803"]
# The version fallback try/except is standard packaging boilerplate.
"src/smcx/__init__.py" = ["RUF067"]
# Protocol stubs: the class docstring documents the contract.
"src/smcx/types.py" = ["D102"]
"src/smcx/containers.py" = ["D102"]
# Preserved research/verification scripts (see docs/research/*),
# not library code — exempt from library-grade lint.
"benchmarks/exploratory/*" = ["ALL"]
# Kill-test harness: maintained, protocol-critical code — full lint
# except docstrings on model closures/helpers.
"benchmarks/killtest/*" = ["D101", "D102", "D103"]
"benchmarks/smc2/bench_smc2.py" = ["D101", "D102", "D103"]
# particles_side follows the `particles` API: uppercase model
# methods (PX0/PX/PY) and a mutable default_params dict are required
# by StateSpaceModel, not smcx style.
"benchmarks/smc2/particles_side.py" = ["D101", "D102", "D103", "N802", "RUF012"]
# conftest installs the jaxtyping import hook before importing smcx,
# which forces module-level imports below code (smcjax convention).
"tests/conftest.py" = ["E402"]

[tool.ruff.format]
docstring-code-format = true

[tool.semantic_release]
# Single-source: only pyproject carries the version. __init__.py
# reads installed metadata; its except-branch fallback is a literal
# "0.0.0" that semantic-release must never rewrite (it did once,
# breaking test_version_fallback_when_package_not_found on CI).
version_toml = ["pyproject.toml:project.version"]
commit_message = "chore(release): {version}"
# Stay 0.x on BREAKING CHANGE commits until stability is declared.
major_on_zero = false

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
type = "github"

[tool.semantic_release.publish]
upload_to_vcs_release = true

[tool.ty.src]
# Research scripts are lint/type-exempt artifacts; typings/ holds
# generated stubs (checked as a search path, not as source);
# killtest and the SMC² particles baseline span separate venvs
# (jax_side / particles_side import packages unresolvable here by
# construction). The native-vs-jax-mps JAX worker is the same case: it
# runs only inside the pinned `uv run --no-project` env, so jax and the
# jax_plugins.mps backend are unresolvable in the project environment.
# The MLX-era benchmark workers reference the pre-ADR-0018 API and
# vendored MLX stubs. They remain as historical harness code.
exclude = [
    # Example notebooks: runtime-verified by execution; *fns unpacking
    # and blackjax's own stubs defeat static arity analysis.
    "docs/examples/**",
    "benchmarks/exploratory/**",
    "benchmarks/killtest/**",
    "benchmarks/native_vs_jax_mps/jax_worker.py",
    "benchmarks/native_vs_jax_mps/mlx_worker.py",
    "benchmarks/smc2/**",
    "typings/**",
]

[tool.ty.environment]
# Vendored mlx.core stubs (ADR-0007): upstream ships py.typed but no
# .pyi for the compiled extension. Regenerate on every mlx floor bump:
#   uv run python -m nanobind.stubgen -m mlx.core -O typings/mlx
extra-paths = ["typings"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["smcx"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "@overload",
]
